--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,5 @@
 *{margin:auto; padding:0;} 
 
-/*body{background-color: #edbcf5;
-background-image:url(../src/Space.png); 
-}*/
 body {
   background-image: url('https://media.wired.co.uk/photos/606da2ab938ecee6e930e8cb/16:9/w_2688,h_1512,c_limit/black-hole.jpg');
   background-repeat: no-repeat;
@@ -27,9 +24,6 @@ header{position: fixed; width: 100%; justify-content: space-between;}
   margin-right: -10px;
   border: black;
   }
-  marquee{
-    background-color: #600e6c;
-  }
   .divtexto{
   color: white;
   background-color: rgba(120, 120, 120, .8);
@@ -44,4 +38,41 @@ header{position: fixed; width: 100%; justify-content: space-between;}
   .container{
     display: flex;
   }
- 
+ .splash{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color:#111144;
+text-align: center;
+color: white;
+display: flex;
+justify-content: center;
+align-items: center; 
+}
+
+ @keyframes fadeout{
+
+  to{
+    opacity: 0;
+  }}
+
+ @keyframes fadein{
+    to{
+      opacity:1;
+    }
+ }
+ .fade2{
+  opacity: 0;
+  animation: fadein 3s;
+  animation-delay: 2s;
+
+  animation-fill-mode:forwards;
+  }
+ .fade{
+opacity: 1;
+animation: fadeout 3s;
+animation-delay: 2s;
+animation-fill-mode:forwards;
+}
