--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,44 +1,23 @@
-*{margin:auto; padding:0;} 
-
-body {
-  background-image: url('https://media.wired.co.uk/photos/606da2ab938ecee6e930e8cb/16:9/w_2688,h_1512,c_limit/black-hole.jpg');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
-  background-color: black;
+*{margin:auto;} 
+body{
+  background-image: url(../src/test3.jpg);
 }
-nav{background-color:#7787d7;}
-a{ font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ; font-size: 22px;text-decoration: none;padding-top: 10px;}
-nav a:link, a:visited{color: black;}
-nav a:hover, a:active{color:darkred;}
-header{position: fixed; width: 100%; justify-content: space-between;}
-.spaceu {
-    display:flex;
-    align-content: space-evenly;
-    grid-template-columns: auto auto auto;
-    gap: 5px;
-    padding: 5px;
-  }
-  .divimg{
-  margin: 50px;
-  margin-right: -10px;
-  border: black;
-  }
+
+header{ width: 100%; justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 999;}
   .divtexto{
   color: white;
   background-color: rgba(120, 120, 120, .8);
-  margin: 50px;
-  margin-bottom: -20px;
   font-size: 30px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 400;
   border-radius: 25px;
   padding: 10px;
   }
-  .container{
-    display: flex;
-  }
- .splash{
+
+.splash{
 position: fixed;
 top: 0;
 left: 0;
@@ -50,27 +29,23 @@ color: white;
 display: flex;
 justify-content: center;
 align-items: center; 
-}
-
+} 
  @keyframes fadeout{
-
   to{
     opacity: 0;
   }}
-
  @keyframes fadein{
     to{
       opacity:1;
     }
  }
- .fade2{
+.fadein{
   opacity: 0;
   animation: fadein 3s;
   animation-delay: 2s;
-
   animation-fill-mode:forwards;
-  }
- .fade{
+}
+.fadeout{
 opacity: 1;
 animation: fadeout 3s;
 animation-delay: 2s;
