--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,15 +1,23 @@
-*{margin:auto;} 
+*{margin:auto;
+}
+
+
 body{
-  background-image: url(../src/test3.jpg);
+color: white;
+background-color: rgb(116, 199, 206);
 }
 
 header{ width: 100%; justify-content: space-between;
   position: sticky;
   top: 0;
-  z-index: 999;}
+  z-index: 999;
+  background-color: white;
+}
+
+
   .divtexto{
   color: white;
-  background-color: rgba(120, 120, 120, .8);
+  background-color: rgba(10, 142, 160, 0.4);
   font-size: 30px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: 400;
